# VisionMac

./: CMakeLists.txt  README.md  display.h  display.mm  feature_extraction.h  feature_extraction.mm  main.mm  morphologicalOperations.mm  process_train_data.mm  thresholding.h  thresholding.mm
database/: images.csv
